cloud-native-meetup/svc-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fedora-vm
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    kubevirt.io/domain: fedora-vm
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fedora-vm
spec:
  rules:
    - host: cloudnative-meetup.training.cluster.acend.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: fedora-vm
                port: 
                  number: 8080
  tls:
  - hosts:
    - cloudnative-meetup.training.cluster.acend.ch
