cloud-native-meetup/svc-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-native-meetup-vm
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    kubevirt.io/domain: cloud-native-meetup-vm
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-native-meetup-vm
spec:
  rules:
    - host: cloudnative-meetup.training.cluster.acend.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: cloud-native-meetup-vm
                port: 
                  number: 80
  tls:
  - hosts:
    - cloudnative-meetup.training.cluster.acend.ch
